# cmd-polkit

./: .gitignore  CHANGELOG  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  LICENSE  README.md  aarch64.crossfile.ini  gcovr.cfg  meson.build
.github/workflows/: alphine-linux-test.yml  alpine-linux-test.yml  static.yml
dev-tools/: continuous-build.sh  github-action-build-alphine-musl.sh  github-action-build-docs.sh  github-action-build.sh  hot-reload.sh
dev-tools/assets/: base.css
dev-tools/scripts/: build-html.js  package-lock.json  package.json  run.js
docs/: code-example.css  contributing.html  doc.css  index.html
examples/: README.md  dmenu-example.sh  rofi-example-with-fprint-grosshack-so.sh  rofi-example-with-fprint-so.sh  rofi-example-with-fprintd-grosshack-so.sh  rofi-example-with-fprintd-so.sh  rofi-example.sh  zenity-jq-example-with-fprint-grosshack-so.sh  zenity-jq-example-with-fprint-grosshack.sh  zenity-jq-example-with-fprint-so.sh  zenity-jq-example.sh
examples/scripts/: rofi-example-with-fprintd-grosshack-so.py  rofi-example-with-fprintd-so.py  rofi-example.py
src/: accepted-actions.enum.c  accepted-actions.enum.h  app.c  app.cmdline  app.h  cmdline.c  cmdline.h  error-message.dialog.c  error-message.dialog.h  json-glib.extension.c  json-glib.extension.h  logger.c  logger.h  main.entrypoint.c  polkit-auth-handler.service.c  polkit-auth-handler.service.h  polkit-authentication.object.h  request-messages.c  request-messages.h
test/: app.mock.c  app.mock.h  error-message.mock.c  error-message.mock.h  gtk.mock.c  gtk.mock.h  logger.mock.c  logger.mock.h  polkit-auth-handler.service.mock.c  polkit-auth-handler.service.mock.h  polkit.mock.c  polkit.mock.h  test-it-command-exec.entrypoint.c  test-it-parallel-mode.entrypoint.c  test-it-serial-mode.entrypoint.c  test-unit.entrypoint.c  test.entrypoint.c
test/assets/: test_response_cancel.sh  test_response_command.sh  test_response_fail_retry.sh  test_response_parallel.sh  test_response_serial.sh
